--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,130 @@
   box-sizing:border-box;  
 }
 
+body{
+    font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif; 
+    font-style: normal;
+}
+
+header nav{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    width: 100%;
+    background: #1d1d1f;
+}
+
+header nav a{
+    
+}
+
+#iphonese{
+    position: relative;
+}
+
+h1{
+    position: absolute;
+    top: .3em;
+    left: 0;
+    z-index: 50;
+    color: white;
+    text-align: center;
+    font-size: 32px;
+    line-height: 1.125;
+    font-weight: 500;
+    letter-spacing: 0.004em;
+    width: 100%;
+}
+
+h2{
+    display: block;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    top: 3em;
+    
+    color: white;
+    text-align: center;
+    font-size: 19px;
+    line-height: 1.4211;
+    font-weight: 350;
+    letter-spacing: .012em;
+    z-index: 50;
+}
+
+h3{
+    position: absolute;
+    top: 11em;
+    left: 0; 
+    z-index: 50;
+    font-size: 14px;
+    color: #86868b;
+    text-align: center;
+    font-weight: 400;
+    width: 100%;
+    letter-spacing: 0.04em;
+}
+
+main a{
+    position:absolute;
+    font-weight: 400;
+    font-size: 19px;
+    top: 10.5em;
+    z-index: 50;
+    color: #2997ff;
+    letter-spacing: inherit;
+    text-decoration: none;
+    width: 100%;
+    text-align: center;
+    justify-content: space-around;
+}
+
+#links{
+    margin-left: -50px;
+}
+
+#rechts{
+    margin-left: 80px;
+}
+
+img{
+    
+    z-index: 50;
+}
+
+footer{
+    background-color: #f5f5f7;
+}
+
+footer ul li{
+    letter-spacing: -.022em;
+}
+
+#introdetail{
+    position: relative;
+}
+
+#h1detail{
+    position: absolute;
+    margin-top: 1.5em;
+    color: black;
+    
+}
+
+#h2detail{
+    position: absolute;
+    margin: 0;
+    color: black;
+    
+}
+
+#adetail{
+    top: 7em;
+}
+
+#imgdetail{
+    margin-top: 70px;
+}
+      
+      
