--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,45 @@
 /* CSS Document */
 *, *::after, *::before {
-  box-sizing:border-box;  
+    box-sizing:border-box; 
+    margin: 0;
+    padding: 0;
+
+
 }
 
 body{
     font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif; 
     font-style: normal;
+    
+
+
 }
 
 header nav{
     display: flex;
-    width: 100%;
     justify-content: space-between;
     width: 100%;
     background: #1d1d1f;
+        padding: 7px 16px;
 }
 
 header nav a{
+    width: 30px;
+}
+
+img{
+    width: 100%;
+}
+
+/*section 1*/
+#iphonese{
+    position: relative;
     
 }
 
-#iphonese{
-    position: relative;
-}
-
-h1{
+#h1-list1{
     position: absolute;
-    top: .3em;
-    left: 0;
+    top: .7em;
     z-index: 50;
     color: white;
     text-align: center;
@@ -38,26 +50,23 @@ h1{
     width: 100%;
 }
 
-h2{
-    display: block;
+#h2-list1{
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
     position: absolute;
-    top: 3em;
+    top: 3.9em;
     
     color: white;
     text-align: center;
-    font-size: 19px;
+    font-size: 17px;
     line-height: 1.4211;
     font-weight: 350;
     letter-spacing: .012em;
     z-index: 50;
 }
 
-h3{
+#h3-list1{
     position: absolute;
-    top: 11em;
+    top: 11.4em;
     left: 0; 
     z-index: 50;
     font-size: 14px;
@@ -72,7 +81,7 @@ main a{
     position:absolute;
     font-weight: 400;
     font-size: 19px;
-    top: 10.5em;
+    top: 10.4em;
     z-index: 50;
     color: #2997ff;
     letter-spacing: inherit;
@@ -90,10 +99,120 @@ main a{
     margin-left: 80px;
 }
 
-img{
-    
-    z-index: 50;
+
+
+/*section 2*/
+#iphone11{
+    position: relative;
 }
+
+#h1-list2{
+    position: absolute;
+    top: .7em;
+    z-index: 50;
+    color: black;
+    font-size: 32px;
+    line-height: 1.125;
+    font-weight: 500;
+    letter-spacing: 0.004em;
+    width: 100%;
+    text-align: center;
+}
+
+#h2-list2{
+    position: absolute;
+    top: 4.4em;
+    
+    color: black;
+    font-size: 17px;
+    line-height: 1.4211;
+    font-weight: 350;
+    letter-spacing: .012em;
+    z-index: 50;
+    width: 100%;
+    text-align: center;
+}
+
+#h3-list2{
+    position: absolute;
+    top: 7.9em;
+    left: 3; 
+    z-index: 50;
+    font-size: 14px;
+    color: #86868b;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    width: 100%;
+    text-align: center;
+}
+
+#links-list2{
+    top: 8.1em;
+    margin-left: -50px;
+}
+
+#rechts-list2{
+    top: 8.1em;
+    margin-left: 80px;
+}
+
+
+
+/*section 3*/
+#iphone11pro{
+    position: relative;
+}
+
+#h1-list3{
+    position: absolute;
+    top: .7em;
+    z-index: 50;
+    color: white;
+    font-size: 32px;
+    line-height: 1.125;
+    font-weight: 500;
+    letter-spacing: 0.004em;
+    width: 100%;
+    text-align: center;
+}
+
+#h2-list3{
+    position: absolute;
+    top: 4.4em;
+    
+    color: white;
+    font-size: 17px;
+    line-height: 1.4211;
+    font-weight: 350;
+    letter-spacing: .012em;
+    z-index: 50;
+    width: 100%;
+    text-align: center;
+}
+
+#h3-list3{
+    position: absolute;
+    top: 7.9em;
+    left: 3; 
+    z-index: 50;
+    font-size: 14px;
+    color: #86868b;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    width: 100%;
+    text-align: center;
+}
+
+#links-list3{
+    top: 8.1em;
+    margin-left: -50px;
+}
+
+#rechts-list3{
+    top: 8.1em;
+    margin-left: 80px;
+}
+
 
 footer{
     background-color: #f5f5f7;
@@ -101,32 +220,156 @@ footer{
 
 footer ul li{
     letter-spacing: -.022em;
+    color: rgb(134, 134, 139);
+    list-style: none;
+    font-size: 12px;
 }
 
-#introdetail{
+footer ul{
+    padding: 16px;
+}
+
+footer nav{
+    padding: 16px;
+}
+.collapsible {
+  padding: 10px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 12px;
+  background-color: #f5f5f7;
+  border-bottom: 1px solid #d2d2d7;     
+ 
+}
+
+.content {
+  padding: 2px 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  background-color: #f5f5f7; 
+  text-decoration: none;
+}
+
+footer nav a{
+    text-decoration: none; 
+    font-size: 12px;
+    color: rgb(134, 134, 139);  
+}
+
+footer section{
+    padding: 16px;
+}
+
+footer section p{
+    letter-spacing: -.022em;
+    color: rgb(134, 134, 139);
+    list-style: none;
+    font-size: 12px;
+}
+
+footer section p a{
+    color: #2997ff;
+    letter-spacing: inherit;
+    text-decoration: none;
+}
+
+footer section a{
+    font-size: 12px;
+    text-decoration: none;
+    color: #515154;
+    margin: 5px 7px 0px 0px;
+    padding: 0px 10px 0px 0px;
+    border-right: 1px solid #d2d2d7;
+}
+
+
+
+
+/*detail pagina*/
+
+
+/*section 1*/
+#iphone-se-deatil{
     position: relative;
 }
 
-#h1detail{
+#h1-detail{
     position: absolute;
-    margin-top: 1.5em;
+    top: 2.6em;
+    z-index: 50;
     color: black;
+    font-size: 28px;
+    line-height: 1.125;
+    font-weight: 500;
+    letter-spacing: 0.004em;
+    width: 100%;
+    text-align: center;
+}
+
+#h2-detail{
+    position: absolute;
+    top: 6.2em;
+    
+    color: black;
+    font-size: 18px;
+    line-height: 1.4211;
+    font-weight: 350;
+    letter-spacing: .012em;
+    z-index: 50;
+    width: 100%;
+    text-align: center;
+}
+
+#a-detail{
+    position: absolute;
+    top: 10em;
+    left: 3; 
+    z-index: 50;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    width: 100%;
+    text-align: center;
+}
+
+/*fieldset*/
+
+main fieldset{
+    border: none;
     
 }
 
-#h2detail{
-    position: absolute;
-    margin: 0;
-    color: black;
+main fieldset div{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    flex-grow: 2;
+}
+
+main fieldset input{
+    display: none;
+}
+
+main fieldset label{
+    display: flex;
+    box-sizing: border-box;
+    flex-direction: column;
+    border: 2px solid #0070c9;
+    align-items: center;
+    padding: 10px 14px;
+    border-radius: 4px;
+    height: 6.23529rem;
+    width: 10rem;
+}
+
+main fieldset label img{
+    height: 32px;
+    width: 32px;
+}
+
+
     
-}
-
-#adetail{
-    top: 7em;
-}
-
-#imgdetail{
-    margin-top: 70px;
-}
-      
       
