--- a/styles/style.css
+++ b/styles/style.css
@@ -290,7 +290,35 @@ footer section a{
 
 /*detail pagina*/
 
+/*bovenbalk*/
 
+#bovenbalk{
+    display: flex;
+    justify-content: space-between;
+    padding: .8em 0 .8em 0;
+    margin: 0 .8em 0 .8em;
+    border-bottom: 1px solid #d2d2d7; 
+    z-index: 100;
+}
+
+#bovenbalk h2{
+    font-size: 19px;
+    font-weight: 400;
+}
+
+#bovenbalk p{
+   font-size: 14px; 
+}
+
+#sticky {
+  position: fixed;
+  top: 0;
+  width: 94%;
+  justify-content: space-between;
+  padding: .8em 0 .8em 0;
+  margin: 0 .8em 0 .8em;
+
+}
 
 /*section 1*/
 #iphone-se-deatil{
@@ -365,6 +393,11 @@ main fieldset input{
     display: none;
 }
 
+input[type="radio"]:checked + label {
+	border: 2px solid #0070c9;
+
+}
+
 main fieldset label{
     display: flex;
     flex-direction: column;
@@ -428,33 +461,34 @@ main fieldset p{
     padding-bottom: .8em;
 }
 
-main fieldset div button{
+main fieldset div div{
     margin: .8em .0;
     background-color: white;
     border-radius: 4px;
     border: 1px solid #d6d6d6;
+    padding-bottom: 0;
 }
 
-main fieldset div button label{
+main fieldset div div label{
     width: 100%;
     border: none;
     height: inherit;
     margin: 0;
 }
 
-main fieldset div button label p{
+main fieldset div div label p{
     font-size: 16px;
     font-weight: 400;
     padding: 0;
 }
 
-main fieldset div button label h2 span{
+main fieldset div div label h2 span{
     font-size: 16px;
     font-weight: 400;
     padding: 0;
 }
 
-main fieldset div button label h2 {
+main fieldset div div label h2 {
     font-weight: 400;
     display: flex;
     justify-content: space-between;
@@ -464,7 +498,7 @@ main fieldset div button label h2 {
     margin-bottom: .8em;
 }
 
-main fieldset div button label ul{
+main fieldset div  label ul{
     letter-spacing: -.022em;
     color: #333333;
     font-size: 12px;
@@ -472,7 +506,7 @@ main fieldset div button label ul{
     width: 86%;
 }
 
-main fieldset div button label ul li{
+main fieldset div div label ul li{
     line-height: 1.6;
     display: block;
     margin: inherit;
