--- a/styles/style.css
+++ b/styles/style.css
@@ -585,7 +585,6 @@ main fieldset div section a{
     color: #333333;
 }
 
-
 #grid-container{
     display: grid;
     grid-template-columns: repeat(2,40%);
@@ -593,6 +592,7 @@ main fieldset div section a{
     margin-top: 2em;
 }
 
+/*bezorg dozen onder elkaar*/
 main ul li{
     display: flex;
     flex-direction: column;
@@ -610,3 +610,56 @@ main ul li h4{
     font-weight: 500;
     color: #333333;
 }
+
+/*inhoud verpakking section*/
+
+#inhoud-vepakking{
+    
+    overflow: hidden;
+    margin-left: 1.9em;
+    margin-right: 1.9em;
+    margin-bottom: 1.5em;
+}
+
+#inhoud-vepakking h1{
+    padding-bottom: 1em;
+    text-align: center;
+    width: 100%;
+    font-size: 25px;
+}
+
+#inhoud-vepakking figure{
+    position: relative;
+    width: 200%;
+    animation: 5s slider infinite;
+    margin: 0;
+    left: 0;
+}
+
+#inhoud-vepakking figure img{
+    width: 50%;
+    float: left;
+}
+
+@keyframes slider{
+    0%{
+        left: 0;
+    }
+    20%{
+        left 0;
+    }
+    25%{
+        left: -100%;
+    }
+    50%{
+        left: -100%;
+    }
+    
+    75%{
+        left: 0;
+    }
+    100%{
+        left: 0;
+    }
+}
+
