--- a/styles/style.css
+++ b/styles/style.css
@@ -626,6 +626,7 @@ main ul li h4{
     text-align: center;
     width: 100%;
     font-size: 25px;
+    font-weight: 500;
 }
 
 #inhoud-vepakking figure{
