--- a/styles/style.css
+++ b/styles/style.css
@@ -412,6 +412,11 @@ main fieldset label{
     
 }
 
+label:hover{    
+    box-shadow: 1px 1px 4px grey;
+}
+
+
 main fieldset label p{
 
     font-size: 12px;
@@ -554,11 +559,17 @@ main fieldset h1{
     border-radius: 4px;
     color: #fff;
     text-align: center;
-    border: 1px; 
-    
+    border: 1px;    
     
 }
 
+button:hover{
+    color: black;
+}
+
+a:hover{
+    color: #0070c9;
+}
 main fieldset section img{
     width: 1.3em;
 }
